fix: verse-label layout breaking in study mode

--- a/src/_pages/ReaderPage/Reader.css
+++ b/src/_pages/ReaderPage/Reader.css
@@ -48,18 +48,6 @@
 
 .reader--mode-study {
     .verse {
-        @apply inline-block relative;
-
-        &:after {
-            @apply content-['\A'] whitespace-pre-wrap;
-        }
-
-        .verse-label {
-            @apply absolute -left-2 sm:-left-4 top-0 -translate-x-full text-[0.625rem] sm:text-[0.75em];
-
-            &:after {
-                @apply [all:unset];
-            }
-        }
+        @apply block relative;
     }
 }
